--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,29 @@
-# Ignore Pycharm folders.
-.idea
-**.idea**
+# ##################################################################################################
+# Directories
+# ##################################################################################################
 
-# Ignore mac files.
-**.DS_Store
+# Hidden.
+.idea
+.vscode
+
+# Configuration.
+__pycache__
+_minted_main
+
+# --------------------------------------------------------------------------------------------------
+# Files
+# --------------------------------------------------------------------------------------------------
+
+# Various LaTeX output files.
+*.aux
+*.fdb_latexmk
+*.fls
+*.gz
+*.log
+*.pdf
+*.out
+*.toc
+
+# --------------------------------------------------------------------------------------------------
+# Exceptions
+# --------------------------------------------------------------------------------------------------
