--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ _minted*
 build
 *.egg*
 
+tests
 
 # --------------------------------------------------------------------------------------------------
 # Files
